<resources>
    <string name="app_name" translatable="false">Lie Detector</string>
    <string name="le_tue_statistiche">Your stats</string>
    <string name="nuova_partita">New match</string>
    <string name="partite_in_corso">Matches in progress</string>
    <string name="partite_completate">Completed matches</string>
    <string name="login" translatable="false">Login</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="registrati">Register</string>
    <string name="email_address">Email address</string>
    <string name="create_new_account">Create a new account</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_email">Insert a valid email</string>
    <string name="error_password">Invalid password: must be at least 6 chars, at least one uppercase letter, one lowercase letter, one number and one symbol between @#$%^&amp;+=!?</string>
    <string name="error_confirm_password">Password doesn\'t match</string>
    <string name="error_username">Insert a valid nickname</string>
    <string name="generic_error">Generic Error</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="nickname" translatable="false">Nickname</string>
    <string name="select_nickname">Choose your nickname</string>
    <string name="confirm">Apply</string>
    <string name="waiting_label">"Wait for the opponent's turn... "</string>
    <string name="turn_label">It\'s your turn!</string>
    <string name="avversario_casuale">Random opponent</string>
    <string name="gioca">Play</string>
    <string name="invia">Send</string>
    <string name="chiedi_qualcosa">Ask something</string>
    <string name="fai_domanda_a">Ask a question to</string>
    <string name="rispondi_domanda_di">Answer question from</string>
    <string name="registra_video">Record video</string>
    <string name="domanda_bugia">Is this a lie?</string>
    <string name="truth">Truth</string>
    <string name="lie">Lie</string>
    <string name="dettagli_risposta">Answer details</string>
    <string name="benvenuto">Welcome</string>
    <string name="bugia_riscontro">Looks like you are lying...</string>
    <string name="verita_riscontro">You are too honest!</string>
    <string name="ambiguo_riscontro">Keep going!</string>
    <string name="count_tentativi">Attempts left: [[COUNT]]</string>
    <string name="domanda_registrazione">Do you want to send this video?</string>
    <string name="send_video">Send video</string>
    <string name="register_again">Register again</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="small_description_video">You are now going to describe a random image. At the end of the video, you will have to declare if you lied or said the truth.</string>
    <string name="title_info_video">Answer Information</string>
    <string name="content_info_video">"In this phase of the game you will record your description of a random image you are provided with using your camera. \n \n &#8226; The objective of this phase is to trick your opponent: don\'t let him know if you're really describing the image you see or just making up details! \n &#8226; Remember you only have at most 15 seconds to record your description! \n &#8226; If you\'re not happy with your description, you can try again 3 times! Note that with every attempt you will receive a different image. \n &#8226; After recording you're going to declare if you said the truth or a lie, no cheating!  "</string>
    <string name="close_button">Close</string>
    <string name="small_description_question">Ask a tricky question to your opponent!</string>
    <string name="title_info_question">Question Information</string>
    <string name="content_info_question">"In this phase of the game you\'re going to ask your opponent a question. \n \n &#8226; The objective in this phase is to ask a question that\'s neither too easy nor too complicated; your opponent has to be able to answer but you should give him a hard time! \n &#8226; Try not to ask a question that allows a simple Yes/No answer, your opponent might easily trick you! \n &#8226; Remember that your opponent has at most 15 seconds to record his answer! \n \n Some examples of tricky questions could be: \n &#8226; Have you ever stolen something, even little, from anyone? And whose was it? \n &#8226; Have you ever bathed at night? When?\n"</string>
    <string name="impostazioni">Settings</string>
    <string name="domanda_e">"The question is: "</string>
    <string name="intro1_title">Welcome to Lie Detector Game</string>
    <string name="intro2_title">Objective of the game</string>
    <string name="intro2_description">A turn based game in which you and your opponent will deceive each other by describing funny images and judging the veridicity of the descriptions.</string>
    <string name="stato_partita">Match status</string>
    <string name="turno_video">It\'s your turn: describe what you will see! (or lie!)</string>
    <string name="turno_risposta">It\'s your turn: answer the question!</string>
    <string name="turno_opinion">It\'s your turn: is it a lie?</string>
    <string name="attendi_video">Wait: your opponent is describing what he sees!</string>
    <string name="attendi_risposta">Wait: your opponent is answering!</string>
    <string name="attendi_opinion">Wait: your opponent is scanning you!</string>
    <string name="title_vinto">You won!</string>
    <string name="title_perso">You lost!</string>
    <string name="title_arreso_vinto">You won!\nYour opponent gave up!</string>
    <string name="title_arreso_perso">You lost!\nYou gave up!</string>
    <string name="title_pareggio">Draw!</string>
    <string name="small_description_nickname">Choose your nickname! It is the name your opponents will see!</string>
    <string name="content_info_nickname">Your nickname should be shorter than 8 characters, with no special characters in it. This name is not unique and should not be offensive for anyone.</string>
    <string name="title_info_nickname">Info on nicknames</string>
    <string name="attendi_registrazione">One moment, we are setting up your account...</string>
    <string name="title_error">Network error</string>
    <string name="content_error">A communication error occurred with the server. Try later.</string>
    <string name="attendi_login">One moment, we\'re getting your information back...</string>
    <string name="attendi_nickname">One moment, we\'re updating your nickname...</string>
    <string name="wait">Wait...</string>
    <string name="attendi_new_match">One moment, we\'re looking for a new game...</string>
    <string name="attendi_invio_opinion">One moment, we\'re sending your opinion...</string>
    <string name="attendi_invio_domanda">One moment, we\'re sending your question...</string>
    <string name="rivedi_tutorial">Watch tutorial</string>
    <string name="abilita_effetti_sonori">"Enable sound effects "</string>
    <string name="modifica_nickname">Edit nickname</string>
    <string name="title_permission">Permissions needed</string>
    <string name="content_permission">To work properly, the app needs these permissions active:</string>
    <string name="intro3_title">Questions</string>
    <string name="intro3_description">You will ask your opponents questions by simply writing them in a text form. Try to come up with something tricky or embarassing!</string>
    <string name="intro4_title">Descriptions</string>
    <string name="intro4_description">To describe the image you\'re provided with, you will record yourself speaking with your camera, don\'t let them know if you\'re faithful to the image or using your imagination!</string>
    <string name="intro5_title">Judgment</string>
    <string name="intro5_description">You will judge your opponent\'s description, trying to guess if they are lying or not. If you guess right, you win a point!</string>
    <string name="intro6_title">This is all!</string>
    <string name="error_question">Invalid question</string>
    <string name="attendi_invio_video">One moment, we\'re loading your description...</string>
    <string name="intro6_description">Remember: the most important thing is to have fun!</string>
    <string name="info_content">This game was developed for a research project by two students of the Master\'s Degree in Computer Science at the University of Padua.\n\nThe purpose of this app is to improve an AI system on Lie Detection.\n\nFor more information, contact nnavarin@math.unipd.it.</string>
    <string name="subround_title">Round [[COUNT]] vs</string>
    <string name="ha_posto_domanda">" asked this question:"</string>
    <string name="mentito_prob">" lied! (prob. [[PROB]]%)"</string>
    <string name="sincero_prob">" told the truth! (prob. [[PROB]]%)"</string>
    <string name="vedi_dettagli_risposta">View answer details</string>
    <string name="guadagnato_punto">" scored a point! (+1)"</string>
    <string name="indovinato">" guessed right!"</string>
    <string name="non_indovinato">" guessed wrong!"</string>
    <string name="lie_prob">Lie probability: [[PROB]]%</string>
    <string name="info_title">About the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="modale_arresa_title">Are you sure you want to give up?</string>
    <string name="modale_arresa_content">This way you will lose the match.</string>
    <string name="intro_round_title">Round structure</string>
    <string name="intro_round_content">You and your opponent will fight for 3 rounds! In every round you will each describe an image and judge the opponent\'s description!\nCaution: after giving your judgment, you will have to wait for the round to end to see the points!</string>
    <string name="descrivi_immagine_a">Describe the image to</string>
    <string name="attendi_immagine">Wait, we are selecting an image for you...</string>
    <string name="invia_come">Send video as</string>
    <string name="key_autenticazione_fallita">Authentication failed</string>
    <string name="key_auth_fallita_content">Incorrect username and password. Try again.</string>
    <string name="titolo_invia_video_tentativo">You are out of attempts.</string>
    <string name="descrizione_invia_video_tentativo">You may send the video anyways or resign the round. Do you want to send the video?</string>
    <string name="per_vittorie">By wins</string>
    <string name="per_rateo">By win rate</string>
    <string name="per_partite_giocate">By games played</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="segnala">Report</string>
    <string name="motivazione">Reason</string>
    <string name="insert_here_description">Describe what happened...</string>
    <string name="describe_image">has described this image</string>
    <string name="registrato_video">has recorded this video</string>
    <string name="indicato_verita">indicated that he was telling the truth</string>
    <string name="indicato_bugia">indicated that he had told a lie</string>
    <string name="non_inviato_video">hasn\'t sent any videos.</string>
    <string name="annulla">Cancel</string>
    <string name="attesa_revisione">Awaiting review from admins...</string>
    <string name="in_revisione">Reviewing</string>
    <string name="report_video">REPORT VIDEO</string>
    <string name="riattiva_istruzioni">Enable instructions while playing</string>
    <string name="titolo_policy">Titolo policy</string>
    <string name="description_policy">Description policy</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="radio_accept">I agree</string>
    <string name="radio_reject">I do not agree</string>
</resources>