<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="#263238">

    <TextView
        android:layout_width="fill_parent"
        android:fontFamily="@font/aldrich"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/domanda_registrazione">

    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:fontFamily="@font/aldrich"
        android:textSize="15dp"
        android:id="@+id/tentativiCounter"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/count_tentativi">

    </TextView>

    <com.google.android.exoplayer2.ui.PlayerView
        android:layout_marginTop="10dp"
        android:id="@+id/videoViewDialog"
        android:background="@color/black"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        app:controller_layout_id="@layout/custom_exo_controller"
        app:show_buffering="true"
        android:layout_width="fill_parent">
    </com.google.android.exoplayer2.ui.PlayerView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:theme="@style/Widget.AppCompat.Button"
                android:background="@drawable/background_button"
                android:layout_marginEnd="5dp"
                android:id="@+id/veritaButton"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                    android:textSize="18dp"
                    android:clickable="false"
                    android:textAllCaps="true"
                    android:text="@string/invia_come">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/oleo_script"
                    android:textAllCaps="true"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:clickable="false"
                    android:text="@string/truth">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:theme="@style/Widget.AppCompat.Button"
                android:background="@drawable/background_button"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:id="@+id/bugiaButton"
                android:clickable="true"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:textAllCaps="true"
                    android:textSize="18dp"
                    android:text="@string/invia_come">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:fontFamily="@font/slackey"
                    android:text="@string/lie">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/red"
            android:id="@+id/riregistraButton"
            android:layout_height="55dp"
            android:text="@string/register_again">
        </Button>

    </LinearLayout>

</LinearLayout>