<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:fontFamily="@font/aldrich"
            android:text="Success"
            android:textSize="28dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:id="@+id/content"
            android:layout_marginTop="10dp"
            android:text="@string/content_info_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/yesButton"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:fontFamily="@font/aldrich"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/green"
                android:text="@string/yes"
                android:layout_marginRight="5dp"
                android:textColor="#FFF" />

            <android.widget.Button
                android:id="@+id/noButton"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:fontFamily="@font/aldrich"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@color/red"
                android:text="@string/no"
                android:textColor="#FFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>